kubernetes/app/archmirror/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archmirror
  namespace: archmirror
spec:
  selector:
    app: archmirror
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
