kubernetes/app/archmirror/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archmirror
  namespace: archmirror
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: ${ARCHMIRROR_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archmirror
                port:
                  number: 80
